# TransWithAI_Cohere_Timestamp

./: .gitignore  .gitmodules  README.md  download_models.py  environment-cpu.yml  environment-cuda118.yml  environment-cuda122.yml  environment-cuda128.yml  environment-vulkan.yml  generation_config.json5  infer.py  pyproject.toml  pyrightconfig.json  运行(CPU).bat  运行(GPU)(输出到当前文件夹).bat  运行(GPU,低显存模式).bat  运行(GPU,高显存加速模式).bat
.github/workflows/: build-release-universal.yml  smoke.yml
docs/: cuda-support.md  submodules.md
models/: manifest.json5
scripts/: build-crispasr-cpu.sh  build-crispasr-cuda.sh  build-crispasr-cuda118.sh  build-crispasr-cuda122.sh  build-crispasr-cuda128.sh  build-crispasr-vulkan.sh  package-universal.py  setup.sh
src/transwithai_cohere_timestamp/: cli.py  config.py  crispasr.py  discovery.py
tests/: test_cli.py
