[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transwithai-cohere-timestamp"
version = "0.1.0"
description = "Compatibility wrapper for TransWithAI Japanese subtitles using CrispASR Cohere backend."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TransWithAI maintainers" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
transwithai-cohere-timestamp = "transwithai_cohere_timestamp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
